# ASAPP

./: .clang-format  .gitignore  ASAPP.sln  CMakeLists.txt  README.md  embed.py  itemdata.json
ASAPP/: .clang-format  ASAPP.vcxproj  ASAPP.vcxproj.filters
ASAPP/include/asa/: utility.h
ASAPP/include/asa/core/: config.h  exceptions.h  init.h  managedthread.h  state.h
ASAPP/include/asa/entities/: baseentity.h  dinoentity.h  entities.h  exceptions.h  localplayer.h
ASAPP/include/asa/game/: actionmappings.h  game.h  settings.h  usersettings.h  window.h
ASAPP/include/asa/interfaces/: actionwheel.h  baseinfo.h  baseinventory.h  console.h  containerinfo.h  craftinginventory.h  dinoinfo.h  dinoinventory.h  exceptions.h  hud.h  iinterface.h  interfacemanager.h  interfaces.h  localinventory.h  menu.h  playerinfo.h  spawnmap.h  teleportmap.h  tribemanager.h  tributeinventory.h
ASAPP/include/asa/items/: itemdata.h  items.h
ASAPP/include/asa/network/: queries.h
ASAPP/include/asa/structures/: basestructure.h  cave_loot_crate.h  cavelootcrate.h  container.h  craftingstation.h  dedicatedstorage.h  exceptions.h  interactable.h  largecropplot.h  simple_bed.h  simplebed.h  structures.h  (+2 more)
ASAPP/include/asapp/: config.h  init.h
ASAPP/source/: config.cpp  init.cpp  itemdata.json
ASAPP/source/core/: config.cpp  exceptions.cpp  init.cpp  state.cpp  wrappers.cpp  wrappers.h
ASAPP/source/entities/: baseentity.cpp  dinoent.cpp  dinoentity.cpp  exceptions.cpp  localplayer.cpp
ASAPP/source/game/: baseentitiyinfo.cpp  controls.cpp  resources.cpp  settings.cpp  window.cpp
ASAPP/source/interfaces/: actionwheel.cpp  baseinventory.cpp  basetravelmap.cpp  console.cpp  craftinginventory.cpp  dedicatedstorageinfo.cpp  dinoinfo.cpp  dinoinventory.cpp  exceptions.cpp  hud.cpp  hud.h  interfacemanager.cpp  localinventory.cpp  mainmenu.cpp  menu.cpp  modeselect.cpp  playerinfo.cpp  serverselect.cpp  spawnmap.cpp  structureinfo.cpp  teleportmap.cpp  travelmap.cpp  tribemanager.cpp  tributeinventory.cpp
ASAPP/source/items/: exceptions.cpp  item.cpp  itemdata.cpp  items.cpp
ASAPP/source/network/: queries.cpp  server.cpp
ASAPP/source/structures/: cavelootcreate.cpp  container.cpp  craftingstation.cpp  dedicatedstorage.cpp  exceptions.cpp  structureexceptions.cpp  tributable.cpp
ASAPP/source/util/: util.cpp  util.h
ASAPP/src/: itemdata.json  main.cpp
ASAPP/src/_internal/: util.cpp  util.h
ASAPP/src/core/: config.cpp  exceptions.cpp  init.cpp  managedthread.cpp  state.cpp
ASAPP/src/entities/: baseentity.cpp  baseentity.h  dinoent.cpp  dinoent.h  dinoentity.cpp  entities.h  exceptions.cpp  localplayer.cpp  localplayer.h
ASAPP/src/game/: actionmappings.cpp  baseentitiyinfo.cpp  controls.cpp  controls.h  globals.h  resources.cpp  resources.h  screen.h  settings.cpp  settings.h  window.cpp  window.h
ASAPP/src/interfaces/: asainterfacemanager.h  asainventory.h  base_travel_map.cpp  baseentitiyinfo.cpp  baseentityinfo.h  baseinfo.h  baseinventory.cpp  baseinventory.h  basetravelmap.cpp  basetravelmap.h  console.cpp  craftinginventory.cpp  dedicatedstorageinfo.cpp  dinoinfo.cpp  dinoinventory.cpp  exceptions.cpp  exceptions.h  hud.cpp  hud.h  iasainterface.h  iinterface.h  interface.h  interfacemanager.cpp  interfacemanager.h  interfaces.h  inventory.h  localinventory.cpp  localinventory.h  main_menu.cpp  mainmenu.cpp  menu.cpp  mode_select.cpp  modeselect.cpp  playerinfo.cpp  playerinfo.h  playerinventory.h  server_select.cpp  serverselect.cpp  spawnmap.cpp  spawnmap.h  (+8 more)
ASAPP/src/items/: consumableitem.h  equippableitem.h  iasaitem.h  item.cpp  item.h  items.cpp  items.h  materials.cpp  materials.h  placeableitem.h  recipe.h
ASAPP/src/network/: queries.cpp  server.cpp
ASAPP/src/structures/: basestructure.h  cavelootcreate.cpp  container.cpp  container.h  crafting_station.cpp  craftingstation.cpp  craftingstation.h  dedicated_storage.cpp  dedicatedstorage.cpp  exceptions.cpp  iasastructure.h  interactablestructure.h  tributable.cpp
ASAPP/src/util/: util.cpp
include/asa/: utility.h
include/asa/core/: exceptions.h  logging.h
include/asa/entities/: baseentity.h  dinoentity.h  exceptions.h  localplayer.h
include/asa/game/: controls.h  exceptions.h  game.h  resources.h  settings.h  window.h
include/asa/interfaces/: console.h  exceptions.h  hud.h  interface.h  interfaces.h  main_menu.h  menu.h  mode_select.h  server_select.h  tribe_manager.h
include/asa/items/: exceptions.h  item.h  itemdata.h  items.h
include/asa/network/: server.h
include/asa/structures/: basestructure.h  cave_loot_crate.h  container.h  crafting_station.h  dedicated_storage.h  interactable.h  simple_bed.h  teleporter.h  tributeable.h
include/asa/ui/: asainterface.h  console.h  exceptions.h  hud.h  interfaces.h  mode_select.h  tribe_manager.h
src/: utility.cpp
src/core/: exceptions.cpp  logging.cpp  managedthread.cpp  state.cpp
src/entities/: baseentity.cpp  exceptions.cpp  localplayer.cpp
src/game/: controls.cpp  resources.cpp  settings.cpp  window.cpp
src/interfaces/: actionwheel.cpp  baseentitiyinfo.cpp  baseinventory.cpp  console.cpp  dedicated_storage_info.cpp  dino_info.cpp  dinoinventory.cpp  exceptions.cpp  hud.cpp  main_menu.cpp  menu.cpp  mode_select.cpp  player_info.cpp  server_select.cpp  spawnmap.cpp  structureinfo.cpp  teleportmap.cpp  travelmap.cpp  tribe_manager.cpp
src/interfaces/components/: button.cpp  search_bar.cpp  slot.cpp  tooltip.cpp  tribelog_message.cpp
src/interfaces/info/: baseentitiyinfo.cpp  dedicatedstorageinfo.cpp  dinoinfo.cpp  playerinfo.cpp  structureinfo.cpp
src/interfaces/inventories/: baseinventory.cpp  craftinginventory.cpp  dinoinventory.cpp  localinventory.cpp  tributeinventory.cpp
src/interfaces/maps/: basetravelmap.cpp  spawnmap.cpp  teleportmap.cpp  travelmap.cpp
src/interfaces/wheels/: baseactionwheel.cpp
src/items/: exceptions.cpp  item.cpp  itemdata.cpp  items.cpp
src/network/: queries.cpp  server.cpp
src/structures/: cavelootcreate.cpp  container.cpp  crafting_station.cpp  dedicated_storage.cpp  exceptions.cpp  tributable.cpp
(+140 files in other folders)
